<resources>
    <string name="app_name">台北市立動物園</string>
    <string name="error_please_try_again">Error</string>
    <string name="retry">重試</string>
    <string name="also_known_as">別名</string>
    <string name="how_to_recognize">辨認方式</string>
    <string name="functionality">功能性</string>
    <string name="last_update">最後更新 : %1$s</string>
    <string name="brief">簡介</string>
    <string name="no_holiday_info">無休館資訊</string>
    <string name="open_website">在網頁開啟</string>
    <string name="plant_list">植物資料</string>
    <string name="api_error_msg">發生錯誤，請下拉重新整理。</string>
</resources>